--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.8.1
+  cloud_firestore: ^5.5.1
+  firebase_auth: ^5.3.4
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
