--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^5.5.1
   firebase_auth: ^5.3.4
   provider: ^6.1.2
+  firebase_database: ^11.2.0
 
 dev_dependencies:
   flutter_test:
