--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^5.3.4
   provider: ^6.1.2
   firebase_database: ^11.2.0
+  firebase_messaging: ^15.1.6
 
 dev_dependencies:
   flutter_test:
