--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.1.2
   firebase_database: ^11.2.0
   firebase_messaging: ^15.1.6
+  geolocator: ^13.0.2
 
 dev_dependencies:
   flutter_test:
