--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -40,8 +40,11 @@ dependencies:
   firebase_auth: ^5.3.4
   provider: ^6.1.2
   firebase_database: ^11.2.0
+
   firebase_messaging: ^15.1.6
   geolocator: ^13.0.2
+  shared_preferences: ^2.3.3
+
 
 dev_dependencies:
   flutter_test:
