--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_messaging: ^15.1.6
   geolocator: ^13.0.2
   shared_preferences: ^2.3.3
+  flutter_local_notifications: ^18.0.1
 
 
 dev_dependencies:
